[gd_scene format=3 uid="uid://cvahj7ccy65fq"]

[ext_resource type="Script" uid="uid://b3lqtmsm1c3kc" path="res://Scripts/calibration_ui.gd" id="1_calibration_script"]

[node name="CalibrationUI" type="CanvasLayer" unique_id=130390356]
layer = 100

[node name="Control" type="Control" parent="." unique_id=709174926]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_calibration_script")

[node name="Background" type="ColorRect" parent="Control" unique_id=1878339823]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=580204718]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="Control/VBoxContainer" unique_id=874975944]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "CALIBRAZIONE HEAD TRACKING"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="Control/VBoxContainer" unique_id=1046980722]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Premi SPAZIO per iniziare"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StatusLabel" type="Label" parent="Control/VBoxContainer" unique_id=1669574992]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "In attesa..."
horizontal_alignment = 1

[node name="ProgressContainer" type="VBoxContainer" parent="Control/VBoxContainer" unique_id=580658910]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProgressBar" type="ProgressBar" parent="Control/VBoxContainer/ProgressContainer" unique_id=1272031837]
custom_minimum_size = Vector2(600, 30)
layout_mode = 2
max_value = 50.0
show_percentage = false

[node name="HelpLabel" type="Label" parent="Control" unique_id=584578863]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Premi SPAZIO per avanzare | Premi ESC per chiudere"
horizontal_alignment = 1
